# SO-ARM-Moce

./: .gitignore  Base_motor_holder_SO101.SLDPRT  LICENSE  README.md  README_ZH.md  Soarm_Moce_Assembly.SLDASM  Wrist_Roll_Follower_SO101.SLDPRT  Wrist_Roll_Pitch_SO101.SLDPRT  base_so101.SLDPRT  forearm_soarm_moce.SLDPRT  moving_jaw_so101.SLDPRT  servo_soarm_moce.SLDPRT
docs/: urdf.xlsx
sdk/: README.md  pyproject.toml
sdk/docs/: SDK_API.md
sdk/examples/: 00_quickstart_connect.py  02_movepose_ik.py  03_sim.py
sdk/src/soarmMoce_sdk/: __init__.py
sdk/src/soarmMoce_sdk.egg-info/: PKG-INFO  top_level.txt
sdk/src/soarmMoce_sdk/api/: __init__.py
sdk/src/soarmMoce_sdk/config/: defaults.yaml  loader.py
sdk/src/soarmMoce_sdk/kinematics/: __init__.py  ik.py  urdf_loader.py
sdk/src/soarmMoce_sdk/transport/: base.py  mock.py  tcp.py
sdk/src/soarmmoce_sdk/: __init__.py
sdk/src/soarmmoce_sdk/api/: __init__.py  errors.py  robot.py  types.py
sdk/src/soarmmoce_sdk/config/: __init__.py  defaults.yaml  loader.py
sdk/src/soarmmoce_sdk/kinematics/: fk.py
sdk/src/soarmmoce_sdk/transport/: base.py  mock.py  serial.py  tcp.py
sdk/tests/: test_fk_ik_roundtrip.py  test_limits.py  test_mock_transport.py  test_robot_api.py
soarmMoce_sdk/: pyproject.toml  setup.py
soarmMoce_sdk/examples/: 03_sim.py
soarmMoce_sdk/examples/.cache/: soarmoce_urdf_resolved.urdf
soarmMoce_sdk/src/soarmMoce_sdk.egg-info/: SOURCES.txt  requires.txt
soarmMoce_sdk/src/soarmMoce_sdk/api/: errors.py  robot.py  types.py
soarmMoce_sdk/tests/: test_fk_ik_roundtrip.py  test_limits.py
(+106 files in other folders)
