[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soarmmoce-sdk"
version = "0.1.1"
description = "SoarmMoce Python SDK (minimal)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "SoarmMoce"}]
license = "MIT"
keywords = ["robot", "arm", "ik", "sdk"]

dependencies = [
  "numpy>=1.21",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
sim = ["pybullet>=3.2"]
viz = []
hardware = []
dev = ["build", "pytest", "black", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soarmmoce_sdk = ["resources/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
